judequinn.1 js & css

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -25,3 +25,17 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
+
+.jumbotron h1, .gray {
+  color: #3B444B;
+}
+
+.jumbotron p.aside {
+  font-size: 19px;
+}
+
+.btn-xxl {
+  padding: 16px 22px;
+  font-size: 28px;
+  border-radius: 10px;
+}
