--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -1,53 +1,44 @@
+{% extends 'pgups/base.html' %}
 {% load staticfiles %}
-<html>
-<meta charset="utf-8" /> 
-<head>
-	<link href="{% static 'css/main.css' %}" rel="stylesheet">  <!-- CSS -->
-</head>
-<body>
-
-<h3>Заплыв № {{start_num}}</h3>
-<hr>
-
-<form method="POST" class="result-form">{% csrf_token %}  
-
-{{ result_formset.management_form }}
-
- {% for result_form in result_formset %}
-
-        {{ result_form.id }}
-        <ul>
-        	<li>{{ result_form.instance.competitor.order_set.all.0.lane }}</li>
-            <li>{{ result_form.instance.competitor }}</li>
-            <li>{{ result_form.time }}</li>
-            <li>{{ result_form.competitor }}</li>
-        </ul>
-
-
- {% endfor %}
-
-
-	     
-	        
-
-	        <button type="submit">Сохранить результат</button>
-
-	    
-	    {% if messages %}
-	            <ul class="messages">
-	            {% for message in messages %}
-	                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-	            {% endfor %}
-	            </ul>
-	    {% endif %}
-
-</form> 
-<hr>
-{% if next_start_id %}<a href="../../start_result/{{next_start_id}}/">Следующий заплыв>></a> {% endif %}
-
-<br> <a href="../../all_starts/1/">Все старты</a><br>
-<a href="../../tours/">Туры</a><br>
-<a href="../../">Главная</a><br>
-    
-</body>
-</html>        
+{% block content %}
+<div class="container">
+	<div class="result row">
+		<div class="single-cdsg-start-num">
+			<span class="start-num">Заплыв {{start_num}}</span>
+			<a class="btn btn-info pull-right" href="../../all_starts/1/">Все старты</a>
+		</div>
+		<form method="POST" class="result-form">{% csrf_token %}
+		{{ result_formset.management_form }}
+			<table class="single-cdsg-table table table-striped table-hover table-bordered">
+				<tbody>
+				{% for result_form in result_formset %}
+					{{result_form.id}}
+					<tr>
+						<td class="order-lane text-center">{{result_form.instance.competitor.order_set.all.0.lane}}</td>
+						<td class="order-name">{{result_form.instance.competitor.person.first_name}} {{result_form.instance.competitor.person.last_name}}</td>
+						<td class="order-team">{{result_form.instance.competitor.userrequest.team}}</td>
+						<td class="order-age text-center">{{result_form.instance.competitor.age}}</td>
+						<td class="order-time">{{result_form.time}}</td>
+						<td class="hidden-field">{{result_form.competitor}}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<button class="btn btn-success pull-right" type="submit">Сохранить результат</button>
+			{% if messages %}
+				<ul class="messages">
+				{% for message in messages %}
+				<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+				{% endfor %}
+				</ul>
+			{% endif %}
+		</form>
+	</div>
+	<div class="next-start row">
+		<hr>
+	{% if next_start_id %}
+		<a class="btn btn-default pull-right" href="../../start_result/{{next_start_id}}/">Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span></a>
+	{% endif %}
+	</div>
+</div>
+{% endblock %}
