--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -37,7 +37,9 @@
 	<div class="next-start row">
 		<hr>
 	{% if next_start_id %}
-		<a class="btn btn-default pull-right" href="../../start_result/{{next_start_id}}/">Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span></a>
+		<a class="btn btn-primary pull-right" href="../../start_result/{{next_start_id}}/">
+			Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span>
+		</a>
 	{% endif %}
 	</div>
 </div>
