--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -147,14 +147,14 @@ label[for*="DELETE"] { display: none; }
 
 /* Chrome, Safari, Opera */
 @-webkit-keyframes greenish {
-    from {background-color: rgba(128, 255, 128, 0.6);}
-    to {background-color: #fff;}
+    0% {background-color: rgba(128, 255, 128, 0.6);}
+    100% {background-color: #fff;}
 }
 
 /* Standard syntax */
 @keyframes greenish {
-    from {background-color: rgba(128, 255, 128, 0.6);}
-    to {background-color: #fff;}
+    0% {background-color: rgba(128, 255, 128, 0.6);}
+    100% {background-color: #fff;}
 }
 
 .order-time-animation {
