--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -21,10 +21,8 @@
 		<div class="container">
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="{% url 'regrequest' %}">Главная</a></li>
-					<li><a href="all_starts/1">Утверждённые старты</a></li>
-					<li><a href="{% url 'tours' %}">Туры</a></li>
-					<li><a href="teams/">Команды</a></li>
+					<li><a href="{% url 'index' %}">Главная</a></li>
+					<li><a href="{% url 'regrequest' %}">Подать заявку</a></li>
 				</ul>
 			</div>
 		</div>
