removed unused templates added different shit

--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -5,26 +5,32 @@
 
 
 <h2>{{competition.name}} </h2>
+
  <h3>Результаты по турам</h3>
 
-<hr>
-
-
-
-
 {% for result in results %}
+
+
+{% if result.2|length > 0 or result.1|length > 0 %}
+<hr>
 <h4>{{result.0}}</h4>
 
 {% for c in result.1 %}
-<li>{{c.person.last_name}} {{c.person.first_name}} : {{c.result_set.all.0.time}}</li>
+<li>
+    {% if c.main_distance%}<b>{% endif %}
+    {{c.person.last_name}} {{c.person.first_name}} : {{c.result_set.all.0.time}}
+    {% if c.main_distance%}</b>{% endif %}
+</li>
 {% endfor %}
 
-
+<br>
 {%if result.2|length > 0 %}
 Не вышли:<br>
 {% for c in result.2 %}
 <li>{{c.person.last_name}} {{c.person.first_name}}</li>
 {% endfor %}
+{% endif %}
+
 {% endif %}
 
 {% endfor %}
