--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -16,7 +16,7 @@
 				</div>
 		</div> <!-- End of Jumbotron -->
 		<!-- MEGAFORM -->
-	<form class="form-horizontal" role="form" action="." method="post">{% csrf_token %} 
+	<form class="form-horizontal" role="form" action="../regrequest/" method="post">{% csrf_token %}
 			<div class="container">
 			<div id="left"> 
 				<div class="well row">
