judequinn.1 moved css to stylus, styled new templates

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -19,7 +19,7 @@
 	<!-- Menu -->
 	<nav class="navbar navbar-default navbar-static-top">
 		<div class="container">
-			<div id="navbar" class="navbar-collapse collapse">
+			<div id="navbar">
 				<ul class="nav navbar-nav">
 					<li><a href="{% url 'index' %}">Главная</a></li>
 					<li><a href="{% url 'regrequest' %}">Подать заявку</a></li>
