--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -14,7 +14,7 @@
 					<td class="order-name">{{result.competitor.person.first_name}} {{result.competitor.person.last_name}}</td>
 					<td class="order-team">{{result.competitor.userrequest.team.name}}</td>
 					<td class="order-age text-center">{{result.competitor.age}}</td>
-					<td class="order-prior-time order-time-animation text-center">{{result.time}}</td>
+					<td class="order-time order-time-animation text-center">{{result.time}}</td>
 				</tr>
 			{% endfor %}
 			</tbody>
