--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -1,19 +1,28 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
-{% load i18n widget_tweaks %}
 {% block content %}
 
-<h2>{{competition.name}}</h2>
-<h3>Команда {{team.name}}</h3>
+<div class="container">
 
-<table class="single-cdsg-table table table-striped table-hover table-bordered">
-    <tbody>
-        {% for item in result  %}
-        <tr>
-            <td class="order-lane text-center">{{item.0.last_name}} {{item.0.first_name}}</td>
-            <td class="order-name">{% for competitor in item.1  %} {{competitor.tour}}<br> {% endfor %}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+	<div class="heading">
+		<h2 class="bold">Команда {{team.name}}</h2>
+	</div>
+
+	<table class="single-cdsg-table table table-striped table-hover table-bordered">
+		<tbody>
+				{% for item in result  %}
+					<tr>
+						<td class="team-name">{{item.0.last_name}} {{item.0.first_name}}</td>
+						<td class="team-competitors">
+							{% for competitor in item.1  %} 
+								{{competitor.tour}} <br> 
+							{% endfor %}
+						</td>
+					</tr>
+				{% endfor %}
+		</tbody>
+	</table>
+
+</div>
+
 {% endblock %}
