--- a/pgups/templates/pgups/index.html
+++ b/pgups/templates/pgups/index.html
@@ -1,11 +1,23 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
-{% load i18n widget_tweaks %}
 {% block content %}
-<h1>Соревнования:</h1>
-{% for competition in competitions %}
-    <li><a href="competition/{{competition.id}}/">{{competition.name}} ({{competition.typ}}) {{competition.date_start}}-{{competition.date_end}}</a>
-    {% if competition.finished %} (Завершены) {% endif %}</li>
-{% endfor %}
+
+<div class="container">
+	<div class="heading">
+		<h1 class="bold">Соревнования</h1>
+	</div>
+	<ul class="list larger">
+		{% for competition in competitions %}
+		<li>
+			<a href="competition/{{competition.id}}/">
+				{{competition.name}} ({{competition.typ}}) {{competition.date_start}}-{{competition.date_end}}
+			</a>
+			{% if competition.finished %} 
+				<span class="alt-color"> (завершены) </span> 
+			{% endif %}
+		</li>
+		{% endfor %}
+	</ul>
+</div>
 
 {% endblock %}
